4.x: Cleanup: Serial annotation, getFirst usage (#8180)