@@ -250,7 +250,7 @@ public final class CompositeDisposable implements Disposable, DisposableContaine
         }
         if (errors != null) {
             if (errors.size() == 1) {
-                throw ExceptionHelper.wrapOrThrow(errors.get(0));
+                throw ExceptionHelper.wrapOrThrow(errors.getFirst());
             }
             throw new CompositeException(errors);
         }
