@@ -86,7 +86,7 @@ public class FlowableOnBackpressureDropTest extends RxJavaTest {
         ts.awaitDone(5, TimeUnit.SECONDS);
         assertEquals(500, ts.values().size());
         ts.assertNoErrors();
-        assertEquals(0, ts.values().get(0).intValue());
+        assertEquals(0, ts.values().getFirst().intValue());
     }
 
     @Test
