@@ -65,7 +65,7 @@ public class FlowableWindowWithTimeTest extends RxJavaTest {
 
         scheduler.advanceTimeTo(95, TimeUnit.MILLISECONDS);
         assertEquals(1, lists.size());
-        assertEquals(lists.get(0), list("one", "two"));
+        assertEquals(lists.getFirst(), list("one", "two"));
 
         scheduler.advanceTimeTo(195, TimeUnit.MILLISECONDS);
         assertEquals(3, lists.size());
@@ -98,7 +98,7 @@ public class FlowableWindowWithTimeTest extends RxJavaTest {
 
         scheduler.advanceTimeTo(101, TimeUnit.MILLISECONDS);
         assertEquals(1, lists.size());
-        assertEquals(lists.get(0), list("one", "two", "three"));
+        assertEquals(lists.getFirst(), list("one", "two", "three"));
 
         scheduler.advanceTimeTo(201, TimeUnit.MILLISECONDS);
         assertEquals(2, lists.size());
@@ -670,7 +670,7 @@ public class FlowableWindowWithTimeTest extends RxJavaTest {
         .assertNoErrors()
         .assertNotComplete();
 
-        ts.values().get(0).test().assertResult();
+        ts.values().getFirst().test().assertResult();
     }
 
     @Test
