@@ -87,7 +87,7 @@ public class MaybeCallbackObserverTest extends RxJavaTest {
 
             TestHelper.assertError(errors, 0, CompositeException.class);
 
-            List<Throwable> ce = TestHelper.compositeList(errors.get(0));
+            List<Throwable> ce = TestHelper.compositeList(errors.getFirst());
 
             TestHelper.assertError(ce, 0, TestException.class, "Outer");
             TestHelper.assertError(ce, 1, TestException.class, "Inner");
