@@ -95,7 +95,7 @@ public class FlowableConcatMapCompletableTest extends RxJavaTest {
         .assertFailure(CompositeException.class)
         ;
 
-        assertEquals(5, ((CompositeException)to.errors().get(0)).getExceptions().size());
+        assertEquals(5, ((CompositeException)to.errors().getFirst()).getExceptions().size());
     }
 
     @Test
