@@ -217,7 +217,7 @@ public class FlowableConcatMapSingleTest extends RxJavaTest {
         .assertFailure(CompositeException.class)
         ;
 
-        CompositeException ce = (CompositeException)ts.errors().get(0);
+        CompositeException ce = (CompositeException)ts.errors().getFirst();
         assertEquals(5, ce.getExceptions().size());
     }
 
