@@ -79,7 +79,7 @@ public final class ObservableCollectTest extends RxJavaTest {
                     .assertNotComplete();
 
             assertEquals(1, list.size());
-            assertEquals(e2, list.get(0).getCause());
+            assertEquals(e2, list.getFirst().getCause());
         } finally {
             RxJavaPlugins.reset();
         }
@@ -179,7 +179,7 @@ public final class ObservableCollectTest extends RxJavaTest {
                     .assertNotComplete();
 
             assertEquals(1, list.size());
-            assertEquals(e2, list.get(0).getCause());
+            assertEquals(e2, list.getFirst().getCause());
         } finally {
             RxJavaPlugins.reset();
         }
