@@ -74,7 +74,7 @@ public class DisposableObserverTest extends RxJavaTest {
 
         assertFalse(tc.isDisposed());
         assertEquals(1, tc.start);
-        assertEquals(1, tc.values.get(0).intValue());
+        assertEquals(1, tc.values.getFirst().intValue());
         assertTrue(tc.errors.isEmpty());
     }
 
