@@ -155,7 +155,7 @@ public class ResourceSubscriberTest extends RxJavaTest {
 
         assertTrue(tc.isDisposed());
         assertEquals(1, tc.start);
-        assertEquals(1, tc.values.get(0).intValue());
+        assertEquals(1, tc.values.getFirst().intValue());
         assertTrue(tc.errors.isEmpty());
     }
 
@@ -218,7 +218,7 @@ public class ResourceSubscriberTest extends RxJavaTest {
         tc.requestMore(1);
 
         assertEquals(1, tc.start);
-        assertEquals(1, tc.values.get(0).intValue());
+        assertEquals(1, tc.values.getFirst().intValue());
         assertTrue(tc.errors.isEmpty());
         assertEquals(1, tc.complete);
     }
